--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #0055ff;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -53,9 +53,9 @@ label {
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
   border-radius: 2px;
-  -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-  -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0px 2px 2px rgba(0, 125, 235, 0.384);
+  -webkit-box-shadow: 0px 2px 2px rgba(12, 150, 255, 0.48);
+  box-shadow: 0px 2px 2px rgba(12, 182, 255, 0.481);
 }
 .profile-img-card {
   width: 96px;
@@ -65,4 +65,20 @@ label {
   -moz-border-radius: 50%;
   -webkit-border-radius: 50%;
   border-radius: 50%;
+}
+
+.jumbotron{
+  background-color: #bebebe2e;
+  box-shadow: #0055ff 0px 1px 5px;
+}
+
+h3{
+  align-items: 'center';
+  align-self: 'center';
+  position: "center";
+  text-align: center;
+}
+
+.nav{
+  background-color: #ffffff;
 }
